update route constants